--- a/Text Editor.vcxproj
+++ b/Text Editor.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Text Editor.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="file1.txt" />
+    <Text Include="file2.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
